--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 		"format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.0.1",
 		"normalize.css": "^8.0.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-redux": "^9.1.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.43",
